# desercion_escolar_argentina

./: .gitignore  LICENSE  README.md  app.py  model_summary.txt  pyproject.toml  regiones_argentina.geojson:Zone.Identifier  setup.py  template_README.md
dashboard/: app.py
dashboard/pages/: analytics.py  home.py  violin.py
data/preprocessed/: .~lock.preprocessed_codificacion_catboost.csv#  data212.csv  data213.csv  data214.csv  data222.csv  data223.csv  data224.csv  preprocessed_eda.csv  preprocessed_predict.csv  preprocessed_test.csv
data/stage/: df_resampled_AllKNN_escalado.csv  df_resampled_oversampled_catboost_0.2.csv  df_resampled_undersampled_0.2.csv  (+20 more)
desercion_escolar_argentina/: balanceo_de_clases.py  balanceo_de_clases_lauti.py  balanceo_de_clases_simplified.py  codificacion_dataset_EDA.py  codificacion_dataset_catboost.py  codificacion_dataset_num_escalado.py  codificacion_dataset_num_sin_escalar.py  codificacion_dataset_sin_escalar.py  construir_dataset.py  construir_dataset_codificacion.py  trainer.py
docs/: Makefile  Variables.md  conf.py  index.rst  make.bat
models/: logistic_1932024.pkl  results.csv  results_resampled_ADASYN_escalado_0.5.csv  results_train_oversampled_0.3.csv  results_train_oversampled_0.4.csv  results_train_undersampled_0.25.csv  results_train_undersampled_0.3.csv  results_unsampled.csv
notebooks/: eda_datos_panel.ipynb  filtrado.py  imputers.ipynb  results.ipynb  transformers.ipynb
pages/: analytics.py  distribucion.py  home.py  mapa.py  violin.py
src/: balanceo_de_clases.py  indicadores_nbi.py  nbi.py
(+21 files in other folders)
