[tool.poetry]
name = "desercion_escolar_argentina"
version = "0.1.0"
description = ""
authors = ["laucouget <lautaro.couget@kenility.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
pyeph = "^1.2.0"
seaborn = "^0.13.2"
dash = "^2.14.2"
jupyter = "^1.0.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.3"
pandas = "^1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
